# modbus-opc-ua-bridge

./: LICENSE  README.md  pyproject.toml
config/: example.serial.json  example.tcp.json
src/modbus_opcua_bridge/: __init__.py  bridge.py  cli.py  codec.py  config.py  models.py
tests/: test_codec.py  test_config.py  test_planner.py
